# can-bus-workbench

./: README.md  pyproject.toml  requirements.txt
docs/: architecture.md  decoder-strategy.md  safety.md  workflow.md
src/can_workbench/: candump.py  capture.py  cli.py  decode.py  models.py  report.py
